# Universe

./: .gitignore  PROJECT_STRUCTURE.md  README.md  pyproject.toml  requirements.txt  run.py
assets/models/asteroids/: eyes_asteroid_models.json
assets/models/asteroids/eros/: 433_eros.gltf
assets/models/asteroids/vesta/: 4_vesta.gltf
scripts/: fetch_asteroid_models.py  fetch_textures.py
src/universe/: __init__.py  main.py  orbits.py  solar_data.py
tests/: test_inspect_visibility.py  test_orbits.py
