[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "universe-solar-system"
version = "0.1.0"
description = "A Python/Ursina 3D solar-system simulator with ship controls, gravity, combat, and a minimap."
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.0",
    "pillow>=10.0.0",
    "panda3d>=1.10.16",
    "panda3d-gltf>=1.3.0",
    "ursina>=8.3.0",
]

[project.scripts]
universe-sim = "universe.main:run"

[tool.setuptools.packages.find]
where = ["src"]
